# kpi-web-messanger-api

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yaml
dockerfiles/: build.docker
migrations/2019-10-21-181904_create_messages/: up.sql
migrations/2019-11-02-181915_create_users_messages/: up.sql
src/: controllers.rs  date_utils.rs  db.rs  db_service.rs  main.rs  models.rs  models_.rs  permissions.rs  redis_service.rs  schema.rs  service_registry.rs
src/controllers/: auth.rs  base.rs  message.rs  mod.rs
src/models/: base.rs  message.rs  mod.rs  user.rs
