[package]
name = "kpi-web-messanger-api"
version = "0.1.0"
authors = ["v.omelchenko <v.omelchenko@smartweb.com.ua>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
hyper = "0.13.0-alpha.4"
tokio-postgres = "0.5.0-alpha.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
async-trait = "0.1.16"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
