[package]
name = "kpi-web-messanger-api"
version = "0.1.0"
authors = ["v.omelchenko <v.omelchenko@smartweb.com.ua>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
hyper = "0.13.0"
tokio-postgres = "0.5.0-alpha.2"
futures = "0.3"
async-trait = "0.1.21"
serde = { version = "1.0.42", features = ["derive"] }
serde_json = "1.0.42"
redis = "0.13.0"
chrono = { version = "0.4.9", features = ["serde"] }
enum-display-derive = "0.1.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io-compat"] }
